# libwaifu2x

./: .gitignore  .gitmodules  README.md  waifu2x-csharp.sln
src/: CMakeLists.txt  CMakePresets.json  cpp.hint  fs.cpp  fs.h  main.cpp  waifu2x-environment.cpp  waifu2x-error.cpp  waifu2x-mat.cpp  waifu2x-model-utility.cpp  waifu2x-model-utility.h  waifu2x-model.cpp  waifu2x-proc.cpp  waifu2x-processor.cpp  waifu2x-wrapper.h  waifu2x.cpp  waifu2x.h
src/shader/: generate_shader_comp_header.cmake
test/cpp/: CMakeLists.txt  CMakePresets.json  main.cpp
test/csharp/: Main.Designer.cs  Main.cs  Main.resx  Program.cs  Waifu2xEnvironmentView.Designer.cs  Waifu2xEnvironmentView.cs  Waifu2xView.Designer.cs  Waifu2xView.cs  utlility.cs  waifu2x.test.csproj
test/csharp/Properties/: Resources.Designer.cs  launchSettings.json
wrapper/csharp/: MarshalUtility.cs  NativeException.cs  NativeWrapperObject.cs  Waifu2x.cs  Waifu2xEnums.cs  Waifu2xEnvironment.cs  Waifu2xMat.cs  Waifu2xModel.cs  Waifu2xProcessStatus.cs  Waifu2xProcessor.cs  Waifu2xWrapper.cs  libwaifu2x.NET.csproj
